layout of header for UI
Made the initial layout of the header for the UI startpage and started working on the layout for the body of the startpage.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,64 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Beer Machine</title>
     <link rel="stylesheet" href="stylesheet.css" />
+    <script src="frontend.js"></script>
   </head>
-  This is a beer machine page
-  <script src="frontend.js"></script>
+  <body>
+    <div class="header">
+      <div class="ourLogo">
+        <h1>B&R</h1>
+      </div>
+      <div class="filler">
+        <p>Beer Brewer</p>
+      </div>
+      <div class="sduLogo">
+        <img src="resources/SDU_Logo.png" width="350" height="100">
+      </div>
+    </div>
+    <div class="body">
+    </div>
+    <div class="inputContainer">
+      <div class="queueTable">
+        <table>
+          <tr>
+            <th>Queue</th>
+            <th>Nr.</th>
+          </tr>
+          <tr>
+            <td>ashkjfl</td>
+            <td>sdfg</td>
+          </tr>
+          <tr>
+            <td>asfdg</td>
+            <td>sgdshf</td>
+          </tr>
+        </table>
+      </div>
+      <div class="storageQuantity">
+        <div class="barley">
+          <label for="amountBarley">Barley</label>
+          <progress id="amountBarley" max="100" value="70">70%</progress>
+        </div>
+        <div class="hops">
+          <label for="amountHops">Hops</label>
+          <progress id="amountHops" max="100" value="70">70%</progress>
+        </div>
+        <div class="malt">
+          <label for="amountMalt">Malt</label>
+          <progress id="amountMalt" max="100" value="70">70%</progress>
+        </div>
+        <div class="wheat">
+          <label for="amountWheat">Wheat</label>
+          <progress id="amountWheat" max="100" value="70">70%</progress>
+        </div>
+        <div class="yeast">
+          <label for="amountYeast">Yeast</label>
+          <progress id="amountYeast" max="100" value="70">70%</progress>
+        </div>
+      </div>
+      <div class="empty">hvjk</div>
+    </div>
+  </body>
 </html>
