Bottom Part WIP
Buttons and Batch Reports roughly implemented

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -202,8 +202,206 @@
     </div>
 
 
-    <div class="empty">hvjk</div>
+    <div class="sensorContainer">
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="thermometer" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Temperature
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    25.0
+                </b>
+            </div>
+        </div>
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="water" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Humidity
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    49.0
+                </b>
+            </div>
+        </div>
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="funnel" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Vibration
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    0.0
+                </b>
+            </div>
+        </div>
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="cube" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Batch ID
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    04
+                </b>
+            </div>
+        </div>
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="speedometer" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Products/Min
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    1.0
+                </b>
+            </div>
+        </div>
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="checkbox-outline" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Acceptable
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    16
+                </b>
+            </div>
+        </div>
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="close" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Defect
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    3
+                </b>
+            </div>
+        </div>
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="stopwatch" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Remaining
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    61
+                </b>
+            </div>
+        </div>
+        <div class="sensorCapsule">
+            <div class="sensorIcon">
+                <ion-icon name="beer" size="large"></ion-icon>
+            </div>
+            <div class="sensorName">
+                <b>
+                    Total Produced
+                </b>
+            </div>
+            <div class="sensorValue">
+                <b>
+                    19
+                </b>
+            </div>
+        </div>
+    </div>
 </div>
+<div class="lowerContainer">
+    <div class="productionButtons">
+        <button type="button" class="buttonLogic">
+            Create Batch
+        </button>
+        <button type="button" class="buttonLogic">
+            Start
+        </button>
+        <button type="button" class="buttonLogic">
+            Stop
+        </button>
+        <button type="button" class="buttonLogic">
+            Reset
+        </button>
+        <button type="button" class="buttonLogic">
+            Clear
+        </button>
+        <button type="button" class="buttonLogic">
+            Abort
+        </button>
+    </div>
+    <div class="batchReports">
+        <table class="reportTable">
+            <tr>
+                <th class="batchIdHeader">Batch ID</th>
+                <th class="dateHeader">Date</th>
+                <th class="reportHeader">Report</th>
+            </tr>
+            <tr>
+                <td>IPA:03</td>
+                <td>09-11-2023</td>
+                <td>
+                    <a href="">
+                        DOWNLOAD REPORT
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>ALE:03</td>
+                <td>09-11-2023</td>
+                <td>
+                    <a href="">
+                        DOWNLOAD REPORT
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>ALE:02</td>
+                <td>08-11-2023</td>
+                <td>
+                    <a href="">
+                        DOWNLOAD REPORT
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
+
+
+
+
 <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
