html and css to frontpage done.
html and css to frontpage done. Approvements should still be made however

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,15 +36,15 @@
                             32%
                         </progress>
                     </div>
-                        <div class="arrowUp">
-                            <ion-icon name="arrow-round-up"></ion-icon>
-                        </div>
-                        <div class="arrowDown">
-                            <ion-icon name="arrow-round-down"></ion-icon>
-                        </div>
-                        <div class="close">
-                            <ion-icon name="close-circle"></ion-icon>
-                        </div>
+                    <div class="arrowUp">
+                        <ion-icon name="arrow-round-up"></ion-icon>
+                    </div>
+                    <div class="arrowDown">
+                        <ion-icon name="arrow-round-down"></ion-icon>
+                    </div>
+                    <div class="close">
+                        <ion-icon name="close-circle"></ion-icon>
+                    </div>
                 </td>
                 <td>1</td>
             </tr>
@@ -328,14 +328,10 @@
                 <ion-icon name="beer" size="large"></ion-icon>
             </div>
             <div class="sensorName">
-                <b>
-                    Total Produced
-                </b>
+                <b>Total Produced</b>
             </div>
             <div class="sensorValue">
-                <b>
-                    19
-                </b>
+                <b>19</b>
             </div>
         </div>
     </div>
@@ -398,8 +394,6 @@
         </table>
     </div>
 </div>
-
-
 
 
 <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
