first function to startpage made
A mockup for function setIngredientAmount made for index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Beer Machine</title>
     <link rel="stylesheet" href="stylesheet.css"/>
-    <script src="frontend.js"></script>
+    <script src="frontend.js" defer></script>
 </head>
 <body>
 <div class="header">
@@ -143,23 +143,23 @@
     <div class="storageAlt">
         <div class="storageQuantity">
             <div class="barContainer">
-                <div class="bar" id="barley" style="height:70%">
+                <div class="bar" id="barley">
                 </div>
             </div>
             <div class="barContainer">
-                <div class="bar" id="hops" style="height:90%">
+                <div class="bar" id="hops">
                 </div>
             </div>
             <div class="barContainer">
-                <div class="bar" id="malt" style="height:20%">
+                <div class="bar" id="malt">
                 </div>
             </div>
             <div class="barContainer">
-                <div class="bar" id="wheat" style="height:50%">
+                <div class="bar" id="wheat">
                 </div>
             </div>
             <div class="barContainer">
-                <div class="bar" id="yeast" style="height:80%">
+                <div class="bar" id="yeast">
                 </div>
             </div>
         </div>
