--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,13 +5,10 @@
     <link rel="stylesheet" href="stylesheet.css"/>
     <script src="frontend.js" defer></script>
 </head>
-<body>
+<body class="body">
 <div class="header">
     <div class="ourLogo">
         <h1>B&R</h1>
-    </div>
-    <div class="filler">
-        <p>Beer Brewer</p>
     </div>
     <div class="sduLogo">
         <img src="resources/SDU_Logo.png" width="350" height="100">
