fixed bug with login and signup button

--- a/frontend/login_page/front_page_login.html
+++ b/frontend/login_page/front_page_login.html
@@ -9,6 +9,9 @@
 <body>
 <header class="header">
     <div class="logo">B&R</div>
+    <div class="sduLogo">
+        <img src="../resources/SDU_Logo.png" width="350" height="100">
+    </div>
 </header>
 
 <div class="main-container">
