API connection with Inventory
Sim works with the inventory (malt, yeast, etc.)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -209,7 +209,7 @@
                     Temperature
                 </b>
             </div>
-            <div class="sensorValue">
+            <div class="sensorValue" id="temperature">
                 <b>
                     25.0
                 </b>
