--- a/frontend/index.html
+++ b/frontend/index.html
@@ -193,7 +193,7 @@
             </b>
         </div>
         <div class="maintenanceContainer">
-            <div class="maintenanceBar">
+            <div class="maintenanceBar" id="maintenance">
             </div>
         </div>
     </div>
@@ -209,8 +209,8 @@
                     Temperature
                 </b>
             </div>
-            <div class="sensorValue" id="temperature">
-                <b>
+            <div class="sensorValue" >
+                <b id="temperature">
                     25.0
                 </b>
             </div>
@@ -225,7 +225,7 @@
                 </b>
             </div>
             <div class="sensorValue">
-                <b>
+                <b id="humidity">
                     49.0
                 </b>
             </div>
@@ -240,7 +240,7 @@
                 </b>
             </div>
             <div class="sensorValue">
-                <b>
+                <b id="vibration">
                     0.0
                 </b>
             </div>
@@ -255,7 +255,7 @@
                 </b>
             </div>
             <div class="sensorValue">
-                <b>
+                <b id="batchID">
                     04
                 </b>
             </div>
@@ -270,7 +270,7 @@
                 </b>
             </div>
             <div class="sensorValue">
-                <b>
+                <b id="prod/min">
                     1.0
                 </b>
             </div>
@@ -285,7 +285,7 @@
                 </b>
             </div>
             <div class="sensorValue">
-                <b>
+                <b id="acceptableProducts">
                     16
                 </b>
             </div>
@@ -300,7 +300,7 @@
                 </b>
             </div>
             <div class="sensorValue">
-                <b>
+                <b id="defectProducts">
                     3
                 </b>
             </div>
@@ -328,7 +328,7 @@
                 <b>Total Produced</b>
             </div>
             <div class="sensorValue">
-                <b>19</b>
+                <b id="totalProducts">19</b>
             </div>
         </div>
     </div>
