added authentication, routing and session

--- a/frontend/login_page/front_page_login.html
+++ b/frontend/login_page/front_page_login.html
@@ -35,7 +35,7 @@
                 <label for="loginPassword">Password</label>
                 <input type="password" id="loginPassword" name="password" required pattern=".*\S+.*" title="Email is required">
 
-                <button type="submit" onclick="submitForm('login')" class="loginSubmit">Login</button>
+                <button type="submit" class="loginSubmit">Login</button>
             </form>
 
             <form class="signup-form" id="signupForm" action="/signup" method="post">
