--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Beer Machine</title>
     <link rel="stylesheet" href="stylesheet.css"/>
-    <script src="frontend.js" defer></script>
+    <script src="sensorFunctionality.js" defer></script>
+    <script src="buttonFunctionality.js" defer></script>
 </head>
 <body class="body">
 <div class="header">
@@ -335,10 +336,10 @@
 </div>
 <div class="lowerContainer">
     <div class="productionButtons">
-        <button type="button" class="buttonLogic">
+        <button type="button" class="buttonLogic" id="createBatch" onclick="href='#'">
             Create Batch
         </button>
-        <button type="button" class="buttonLogic">
+        <button type="button" class="buttonLogic" id="startButton">
             Start
         </button>
         <button type="button" class="buttonLogic">
