made functionalities on buttons
made functionalities to simulation on buttons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -342,16 +342,16 @@
         <button type="button" class="buttonLogic" id="startButton">
             Start
         </button>
-        <button type="button" class="buttonLogic">
+        <button type="button" class="buttonLogic" id="stopButton">
             Stop
         </button>
-        <button type="button" class="buttonLogic">
+        <button type="button" class="buttonLogic" id="resetButton">
             Reset
         </button>
-        <button type="button" class="buttonLogic">
+        <button type="button" class="buttonLogic" id="clearButton">
             Clear
         </button>
-        <button type="button" class="buttonLogic">
+        <button type="button" class="buttonLogic" id="abortButton">
             Abort
         </button>
     </div>
