Made display of current state
Made display of current state of the machine in UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -355,6 +355,19 @@
             Abort
         </button>
     </div>
+    <div class="currentStateContainer" id="currentStateContainer">
+        <h2 class="stateLabel">Current State</h2>
+        <div class="currentStateDisplay" id="currentStateDisplay">
+            <div class="stateColor" id="stateColor"></div>
+            <div class ="stateContent">
+                <p class="stateNumber" id="stateNumber">4</p>
+                <p> - </p>
+                <p class="stateText" id="stateText">Stopped</p>
+            </div>
+
+        </div>
+
+    </div>
     <div class="batchReports">
         <table class="reportTable">
             <tr>
