--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,11 +23,21 @@
         <h1>Create Batch</h1>
         <form method="POST">
         <h3>Choose type of beer</h3>
+             <select name="beerType" id="typeOfBeer">
+                 <option value="none" selected disabled hidden>Select beer</option>
+                 <option value="0">Pilsner</option>
+                 <option value="1">Wheat</option>
+                 <option value="2">IPA</option>
+                 <option value="3">Stout</option>
+                 <option value="4">Ale</option>
+                 <option value="5">Alc Free</option>
+    </select>
         <h3>Choose size for this batch</h3>
+            <input id="batchSize" TYPE="NUMBER" MIN="1" MAX="65535" STEP="1" VALUE="100" SIZE="6">
         <h3>Choose speed for production</h3>
             <input id="speedSlider" type="range" class="slider" min="0" max="100" value="20">
-             <p>Value: <span id="demo"></span> %</p>
-        <input id="submitBatch"type="submit"> </input>
+             <p>Value: <span id="sliderValue"></span> %</p>
+        <input id="submitBatch" type="submit"> </input>
     </form>
     </span>
 </div>
