--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,120 +43,10 @@
 </div>
 <div class="inputContainer">
     <div class="queueTable">
-        <table class="beerQueueTable">
+        <table class="beerQueueTable" id="batchQueueTable">
             <tr>
                 <th>Queue</th>
                 <th>Nr.</th>
-            </tr>
-            <tr>
-                <td class="progressAlignment">
-                    <div id="queue1">
-                        IPA:04
-                    </div>
-                    <div class="batchProgress">
-                        <progress id="beerProgress1" value="32" max="100">
-                            32%
-                        </progress>
-                    </div>
-                    <div class="arrowUp">
-                        <ion-icon name="arrow-round-up"></ion-icon>
-                    </div>
-                    <div class="arrowDown">
-                        <ion-icon name="arrow-round-down"></ion-icon>
-                    </div>
-                    <div class="close">
-                        <ion-icon name="close-circle"></ion-icon>
-                    </div>
-                </td>
-                <td>1</td>
-            </tr>
-            <tr>
-                <td class="progressAlignment">
-                    <div id="queue2">
-                        ALE:04
-                    </div>
-                    <div class="batchProgress">
-                        <progress id="beerProgress2" value="0" max="100">
-                            0%
-                        </progress>
-                    </div>
-                    <div class="arrowUp">
-                        <ion-icon name="arrow-round-up"></ion-icon>
-                    </div>
-                    <div class="arrowDown">
-                        <ion-icon name="arrow-round-down"></ion-icon>
-                    </div>
-                    <div class="close">
-                        <ion-icon name="close-circle"></ion-icon>
-                    </div>
-                </td>
-                <td>2</td>
-            </tr>
-            <tr>
-                <td class="progressAlignment">
-                    <div id="queue3">
-                        PIL:29
-                    </div>
-                    <div class="batchProgress">
-                        <progress id="beerProgress3" value="0" max="100">
-                            0%
-                        </progress>
-                    </div>
-                    <div class="arrowUp">
-                        <ion-icon name="arrow-round-up"></ion-icon>
-                    </div>
-                    <div class="arrowDown">
-                        <ion-icon name="arrow-round-down"></ion-icon>
-                    </div>
-                    <div class="close">
-                        <ion-icon name="close-circle"></ion-icon>
-                    </div>
-                </td>
-                <td>3</td>
-            </tr>
-            <tr>
-                <td class="progressAlignment">
-                    <div id="queue4">
-                        STO:09
-                    </div>
-                    <div class="batchProgress">
-                        <progress id="beerProgress4" value="0" max="100">
-                            0%
-                        </progress>
-                    </div>
-                    <div class="arrowUp">
-                        <ion-icon name="arrow-round-up"></ion-icon>
-                    </div>
-                    <div class="arrowDown">
-                        <ion-icon name="arrow-round-down"></ion-icon>
-                    </div>
-                    <div class="close">
-                        <ion-icon name="close-circle"></ion-icon>
-                    </div>
-                </td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td class="progressAlignment">
-                    <div id="queue5">
-                        IPA:05
-                    </div>
-                    <div class="batchProgress">
-                        <progress id="beerProgress5" value="0" max="100">
-                            0%
-                        </progress>
-                    </div>
-                    <div class="arrowUp">
-                        <ion-icon name="arrow-round-up"></ion-icon>
-                    </div>
-                    <div class="arrowDown">
-                        <ion-icon name="arrow-round-down"></ion-icon>
-                    </div>
-                    <div class="close">
-                        <ion-icon name="close-circle"></ion-icon>
-                    </div>
-                </td>
-                <td>5</td>
             </tr>
         </table>
     </div>
