--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,6 +41,9 @@
     </form>
     </span>
 </div>
+<div id="customAlert">
+    <p>Ongoing Maintenance. Please wait.</p>
+</div>
 <div class="inputContainer">
     <div class="queueTable">
         <table class="beerQueueTable">
