--- a/frontend/index.html
+++ b/frontend/index.html
@@ -230,7 +230,7 @@
                 </b>
             </div>
             <div class="sensorValue">
-                <b>
+                <b id="remainingProducts">
                     61
                 </b>
             </div>
