create batch report functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -305,9 +305,9 @@
                 <td>ALE:03</td>
                 <td>09-11-2023</td>
                 <td>
-                    <a href="">
+                    <button type="link" onclick="testBachReportFunctionality(1)">
                         DOWNLOAD REPORT
-                    </a>
+                    </button>
                 </td>
             </tr>
             <tr>
