Cleaned up a bunch of files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,10 @@
 <body class="body">
 <div class="header">
     <div class="ourLogo">
-        <h1>B&R</h1>
+        <h1>B&&R</h1>
     </div>
-    <div class="sduLogo">
-        <img src="resources/SDU_Logo.png" width="350" height="100">
+    <div class="Logo">
+        <img src="resources/BeerLogo.png" width="200" height="150">
     </div>
 </div>
 <div class="body">
@@ -21,7 +21,7 @@
 <div class="popup">
     <span class="popuptext" id="batchPopup">
         <h1>Create Batch</h1>
-        <form method="POST">
+        <form>
         <h3>Choose type of beer</h3>
              <select name="beerType" id="typeOfBeer">
                  <option value="none" selected disabled hidden>Select beer</option>
