--- a/frontend/login_page/front_page_login.html
+++ b/frontend/login_page/front_page_login.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <header class="header">
-    <div class="logo">B&R</div>
+    <div class="logo">B&&R</div>
     <div class="sduLogo">
-        <img src="/images/SDU_Logo.png" width="350" height="100">
+        <img src="images/BeerLogo.png" width="200" height="150">
     </div>
 </header>
 
