--- a/frontend/login_page/front_page_login.html
+++ b/frontend/login_page/front_page_login.html
@@ -18,7 +18,7 @@
     <div class="inner-box">
 
         <div class="heading-container">
-            <h2 class="heading-container-text">B&R Authentication</h2>
+            <h2 class="heading-container-text">B&&R Authentication</h2>
         </div>
 
         <div class="content-box">
